--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node .",
-    "start-dev": "nodemon .",
-    "posttest": "npm run lint && nsp check"
+    "start-dev2": "nodemon .",
+    "start-dev": "concurrently \"nodemon .\"  npm start --prefix client \"",
+    "posttest": "npm run lint && nsp check",
+    "prestart": "npm run --prefix client build",
+    "postinstall": "npm install --prefix client"
+
   },
   "dependencies": {
     "compression": "^1.0.3",
+    "concurrently": "^4.1.0",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
     "loopback": "^3.0.0",
